--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -46,10 +46,7 @@
 'modules/select',
 
 'modules/running-list',
-'modules/report-list',
-
-// Pattern library (a kind of styleguide)
-'core/pattern-library';
+'modules/report-list';
 
 
 
