--- a/app/scss/modules/_select.scss
+++ b/app/scss/modules/_select.scss
@@ -103,7 +103,6 @@
                 padding-right: 2em;
 
                 &:after {
-
                     @extend %icon;
                     line-height: inherit;
                     content: '\f00c';
@@ -123,21 +122,28 @@
             color: lighten($color-neutral-60, 20%);
             width: 100%;
             padding: 0;
-            margin: -.4em 0;
+            margin: 1px 0;
             border-radius: 0;
 
             &:first-child {
                 border-radius: .2em .2em 0 0;
+                display: block;
+                padding: 0;
             }
 
             &:last-child {
                 border-radius: 0 0 .2em .2em;
+                display: block;
+                padding: 0;
             }
 
             &:hover {
                 background: darken($white, 10%);
             }
 
+            &:disabled {
+                display: none;
+            }
 
         }
     }
