--- a/app/scss/shared-components/_title.scss
+++ b/app/scss/shared-components/_title.scss
@@ -1,6 +1,5 @@
 // ========== Title
-.title, 
-.story-list--tools {
+.title {
     @include flex(1 1 auto);
     @include display(flex);
     @include align-items(center);
