--- a/app/views/intro/intro.html
+++ b/app/views/intro/intro.html
@@ -1,5 +1,5 @@
-<header></header>
-<div class="intro" ng-controller="PreloaderCtrl as loader">
-    <h1><i class="fa fa-check-circle"></i>Finq</h1>
+
+
+<div class="login--wrapper" ng-controller="PreloaderCtrl as loader">
     <div ui-view class="view-animate"></div>
 </div>
