--- a/app/scss/shared-components/_buttons.scss
+++ b/app/scss/shared-components/_buttons.scss
@@ -55,47 +55,45 @@ input[type='submit'] {
     }
 }
 
-// %button {
-//     -webkit-appearance: none;
-//     -moz-appearance: none;
-//     appearance: none;
-//     border: 0;
-//     border-radius: $border-radius-10;
-//     cursor: pointer;
-//     display: inline-block;
-//     font-family: $font-family-body;
-//     font-size: $font-size-30;
-//     -webkit-font-smoothing: antialiased;
-//     -moz-osx-font-smoothing: grayscale;
-//     font-weight: bold;
-//     line-height: 1.5em;
-//     margin: 0 0 0.25rem 0;
-//     padding: 0.5rem 1rem;
-//     text-decoration: none;
-//     vertical-align: bottom;
+%button {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border: 0;
+    border-radius: $border-radius-10;
+    cursor: pointer;
+    display: inline-block;
+    font-family: $font-family-body;
+    font-size: $font-size-30;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    font-weight: bold;
+    line-height: 1.5em;
+    margin: 0 0 0.25rem 0;
+    padding: 0.5rem 1rem;
+    text-decoration: none;
+    vertical-align: bottom;
 
-//     &:focus { outline: 0; }
-// }
+    &:focus { outline: 0; }
+}
 
 
 // The standard button has the $color-brand colors
-// .button,
-// input[type=submit],
-// button {
-//     @extend %button;
-//     background: $color-brand-50;
-//     color: $white;
+.button-tint {
+    @extend %button;
+    background: $color-brand-50;
+    color: $white;
 
-//     &:hover {
-//         background: $color-brand-60;
-//         color: $white;
-//     }
+    &:hover {
+        background: $color-brand-60;
+        color: $white;
+    }
 
-//     &:active,
-//     &:focus {
-//         box-shadow: inset 0 1px 3px rgba($black, 0.2);
-//     }
-// }
+    &:active,
+    &:focus {
+        box-shadow: inset 0 1px 3px rgba($black, 0.2);
+    }
+}
 
 .button--neutral,
 input[type=submit].button--neutral,
