knoppen spacing netjes

--- a/app/scss/shared-components/_actions.scss
+++ b/app/scss/shared-components/_actions.scss
@@ -10,8 +10,8 @@
         background: $color-neutral-90;
         border: solid 2px $color-neutral-90;
         border-radius: $border-radius-20;
-        // font-size: 0.876rem;
-        padding: $spacing/3 $spacing/1.5;
+        margin-top: 5px; 
+        padding: 0.25rem $spacing/1.5;
     }
     
     i {
