--- a/app/scss/main.css
+++ b/app/scss/main.css
@@ -911,7 +911,8 @@ i.expand:before {
     background: #1B2224;
     border: solid 2px #1B2224;
     border-radius: 0.313rem;
-    padding: 0.5rem 1rem; }
+    margin-top: 5px;
+    padding: 0.25rem 1rem; }
   .actions i {
     margin: 0 0.25rem 0 0;
     color: #fff; }
